fixed site information section aligning issue

--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ grid-template-rows: 1fr 4fr;
     grid-row: 2 / 3;
     display: grid;
     grid-template-columns: 3fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows:  1fr;
     padding: 30px 20px 40px 20px;
     max-height: 100%;
 }
@@ -266,6 +266,13 @@ ul li {
 }
 
 
+
+.site-info {
+    display: grid;
+    grid-template-rows: 280px 1fr;
+    row-gap:20px ;
+    
+}
 
 
 .announcements-section {
